# carespace-pm-crews-final

./: .env.example  .gitignore  CONFIG_MANUAL.md  README.md  TEAM_MANUAL.md  dedup.py  orchestrator.py  pyproject.toml
.claude/: settings.json
.claude/commands/: backlog.md
.claude/skills/backlog/: SKILL.md
.claude/skills/sprint-plan/: SKILL.md
crews/assignment_crew/: pyproject.toml
crews/assignment_crew/src/assignment_crew/: crew.py  main.py
crews/assignment_crew/src/assignment_crew/config/: agents.yaml  tasks.yaml
crews/blocker_radar_crew/: pyproject.toml
crews/blocker_radar_crew/src/blocker_radar_crew/: crew.py  main.py
crews/blocker_radar_crew/src/blocker_radar_crew/config/: agents.yaml  tasks.yaml
crews/bug_triage_crew/: pyproject.toml
crews/bug_triage_crew/src/bug_triage_crew/: crew.py  main.py
crews/bug_triage_crew/src/bug_triage_crew/config/: agents.yaml  tasks.yaml
crews/clickup_rules_crew/: pyproject.toml
crews/clickup_rules_crew/src/clickup_rules_crew/: crew.py  main.py
crews/clickup_rules_crew/src/clickup_rules_crew/config/: agents.yaml  tasks.yaml
crews/compliance_crew/: pyproject.toml
crews/compliance_crew/src/compliance_crew/: crew.py  main.py
crews/compliance_crew/src/compliance_crew/config/: agents.yaml  tasks.yaml
crews/customer_success_crew/: pyproject.toml
crews/customer_success_crew/src/customer_success_crew/: crew.py  main.py
crews/customer_success_crew/src/customer_success_crew/config/: agents.yaml  tasks.yaml
crews/daily_pulse_crew/: pyproject.toml
crews/daily_pulse_crew/src/daily_pulse_crew/: crew.py  main.py
crews/daily_pulse_crew/src/daily_pulse_crew/config/: agents.yaml  tasks.yaml
crews/deal_intel_crew/: pyproject.toml
crews/deal_intel_crew/src/deal_intel_crew/: crew.py  main.py
crews/deal_intel_crew/src/deal_intel_crew/config/: agents.yaml  tasks.yaml
crews/exec_report_crew/: pyproject.toml
crews/exec_report_crew/src/exec_report_crew/: crew.py  main.py
crews/exec_report_crew/src/exec_report_crew/config/: agents.yaml  tasks.yaml
crews/huddle_notes_crew/: pyproject.toml
crews/huddle_notes_crew/src/huddle_notes_crew/: crew.py  main.py
crews/huddle_notes_crew/src/huddle_notes_crew/config/: agents.yaml  tasks.yaml
crews/intake_crew/: pyproject.toml
crews/intake_crew/src/intake_crew/: crew.py  main.py
crews/intake_crew/src/intake_crew/config/: agents.yaml  tasks.yaml
crews/marketing_ops_crew/: pyproject.toml
crews/marketing_ops_crew/src/marketing_ops_crew/: crew.py  main.py
crews/marketing_ops_crew/src/marketing_ops_crew/config/: agents.yaml  tasks.yaml
crews/pr_radar_crew/: pyproject.toml
crews/pr_radar_crew/src/pr_radar_crew/: crew.py  main.py
crews/pr_radar_crew/src/pr_radar_crew/config/: agents.yaml  tasks.yaml
crews/retrospective_crew/: pyproject.toml
crews/retrospective_crew/src/retrospective_crew/: crew.py  main.py
crews/retrospective_crew/src/retrospective_crew/config/: agents.yaml  tasks.yaml
crews/sla_crew/src/sla_crew/: crew.py
crews/sla_crew/src/sla_crew/config/: tasks.yaml
crews/sprint_crew/: pyproject.toml
crews/sprint_crew/src/sprint_crew/: crew.py  main.py
crews/sprint_crew/src/sprint_crew/config/: agents.yaml  tasks.yaml
crews/sprint_planning_crew/: pyproject.toml
crews/sprint_planning_crew/src/sprint_planning_crew/: crew.py  main.py
crews/sprint_planning_crew/src/sprint_planning_crew/config/: agents.yaml  tasks.yaml
crews/standup_crew/: pyproject.toml
crews/standup_crew/src/standup_crew/: crew.py  main.py
crews/standup_crew/src/standup_crew/config/: agents.yaml  tasks.yaml
crews/triage_crew/: pyproject.toml
crews/triage_crew/src/triage_crew/: crew.py  main.py
crews/triage_crew/src/triage_crew/config/: agents.yaml  tasks.yaml
crews/workspace_health_crew/: pyproject.toml
crews/workspace_health_crew/src/workspace_health_crew/: crew.py  main.py
crews/workspace_health_crew/src/workspace_health_crew/config/: agents.yaml  tasks.yaml
shared/: guardrails.py  vault_hooks.py
shared/config/: context.py
shared/data/: compliance_state.py
shared/tools/: __init__.py  clickup.py  clickup_helpers.py  github.py  slack.py  vanta.py  vault.py
src/: main.py
src/config/: agents.yaml
src/crews/backlog/: crew.py
src/crews/backlog/config/: agents.yaml  tasks.yaml
src/crews/compliance/: crew.py
src/crews/compliance/config/: agents.yaml
src/crews/daily_pulse/: crew.py
src/crews/daily_pulse/config/: agents.yaml  tasks.yaml
src/crews/exec_report/: crew.py
src/crews/exec_report/config/: agents.yaml  tasks.yaml
src/crews/huddle_notes/: crew.py
src/crews/huddle_notes/config/: agents.yaml  tasks.yaml
src/crews/intake/: crew.py
src/crews/intake/config/: agents.yaml  tasks.yaml
src/crews/retrospective/: crew.py
src/crews/retrospective/config/: agents.yaml  tasks.yaml
src/crews/sla/: crew.py
src/crews/sla/config/: agents.yaml  tasks.yaml
src/crews/sprint/: crew.py
src/crews/sprint/config/: agents.yaml  tasks.yaml
src/crews/triage/: crew.py
src/crews/triage/config/: agents.yaml  tasks.yaml
src/shared/: guardrails.py  vault_hooks.py
src/shared/config/: context.py
src/shared/data/: compliance_state.py
src/shared/models/: __init__.py  compliance.py  daily_pulse.py  exec_report.py  retrospective.py  sla.py  sprint.py  triage.py
src/shared/skills/healthcare-compliance/: SKILL.md
src/shared/skills/pm-context/: SKILL.md
src/shared/skills/sprint-methodology/: SKILL.md
src/shared/tools/: __init__.py  clickup_helpers.py  github.py  slack.py  vanta.py  vault.py
