[project]
name = "blocker-radar-crew"
version = "0.1.0"
description = "Scans all active lists daily for blockers, builds dependency chains, calculates business impact, and escalates to alerts."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.0.0",
    "crewai-tools>=0.14.0",
    "requests>=2.31.0",
]

[project.scripts]
run_crew = "blocker_radar_crew.main:run"

[tool.crewai]
type = "crew"
