[project]
name = "bug-triage-crew"
version = "0.1.0"
description = "Monitors all bug lists, triages new bugs by severity and domain, enforces SLA deadlines, and escalates breaches. Security vulnerabilities are always P0."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.0.0",
    "crewai-tools>=0.14.0",
    "requests>=2.31.0",
    "PyGithub>=2.3.0",
]

[project.scripts]
run_crew = "bug_triage_crew.main:run"

[tool.crewai]
type = "crew"
