[project]
name = "clickup-rules-crew"
version = "0.1.0"
description = "Enforces 27 ClickUp automation rules: Flow, Guard, and Signal rules for sprint hygiene."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.0.0",
    "crewai-tools>=0.14.0",
    "requests>=2.31.0",
]

[project.scripts]
run_crew = "clickup_rules_crew.main:run"

[tool.crewai]
type = "crew"
