[project]
name = "customer-success-crew"
version = "0.1.0"
description = "Tracks client onboardings, account health, support escalations, and feedback. Flags churn risk, enforces onboarding SLAs, and routes feedback to the product backlog."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.0.0",
    "crewai-tools>=0.14.0",
    "requests>=2.31.0",
    "PyGithub>=2.3.0",
]

[project.scripts]
run_crew = "customer_success_crew.main:run"

[tool.crewai]
type = "crew"
