[project]
name = "exec-report-crew"
version = "0.1.0"
description = "Produces weekly cross-workspace executive health reports covering engineering, GTM, compliance, customer success, and top risks."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.0.0",
    "crewai-tools>=0.14.0",
    "requests>=2.31.0",
]

[project.scripts]
run_crew = "exec_report_crew.main:run"

[tool.crewai]
type = "crew"
