[project]
name = "marketing-ops-crew"
version = "0.1.0"
description = "Monitors marketing campaigns, content calendar, product launches, and partner events. Auto-creates GTM launch checklists."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.0.0",
    "crewai-tools>=0.14.0",
    "requests>=2.31.0",
]

[project.scripts]
run_crew = "marketing_ops_crew.main:run"

[tool.crewai]
type = "crew"
