[project]
name = "retrospective-crew"
version = "0.1.0"
description = "Calculates sprint velocity, writes retrospective docs, and posts health summaries to Slack."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.0.0",
    "crewai-tools>=0.14.0",
    "requests>=2.31.0",
    "PyGithub>=2.3.0",
]

[project.scripts]
run_crew = "retrospective_crew.main:run"

[tool.crewai]
type = "crew"
