[project]
name = "sprint-crew"
version = "0.1.0"
description = "Bi-weekly sprint planning + assignment. Scores backlog, creates sprint, fills to 80% velocity, assigns by domain + workload."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.0.0",
    "crewai-tools>=0.14.0",
    "requests>=2.31.0",
    "PyGithub>=2.3.0",
]

[project.scripts]
run_crew = "sprint_crew.main:run"

[tool.crewai]
type = "crew"
