[project]
name = "workspace-health-crew"
version = "0.1.0"
description = "Meta-monitoring crew that validates all 13 PM crews ran successfully and workspace data quality."
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.0.0",
    "crewai-tools>=0.14.0",
    "requests>=2.31.0",
    "PyGithub>=2.3.0",
]

[project.scripts]
run_crew = "workspace_health_crew.main:run"

[tool.crewai]
type = "crew"
